--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"apify": "^2.3.2",
 		"archiver": "^5.3.1",
 		"crypto-js": "^4.1.1",
+		"mime-types": "^2.1.35",
 		"playwright": "*"
 	},
 	"devDependencies": {
